--- a/app/views/fortunes/show.html.erb
+++ b/app/views/fortunes/show.html.erb
@@ -10,6 +10,16 @@
   <%= @fortune.author %>
 </p>
 
+<% if @fortune.comments.any? %>
+  <h2>Comments</h2>
+  <%= render :partial => 'comments/comment', :collection => @fortune.comments %>
+<% end %>
+<br/>
+
+<h2>Add new comment</h2>
+<%= render :partial => 'comments/form' %>
+
+
 
 <%= link_to 'Edit', edit_fortune_path(@fortune) %> |
 <%= link_to 'Back', fortunes_path %>
