--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -9,18 +9,18 @@ html {
 }
 // http://www.smashingmagazine.com/2011/10/07/16-pixels-body-copy-anything-less-costly-mistake/ */
 body {
-  font-size: 18px;
+  font-size: medium;
   line-height: 1.5;
 }
 // width 600px approx. 60 characters per line
 div[role="main"] {
-  width: 600px;
+  width: 800px;
   margin: 0 auto 18px;
   padding: 2px 18px 18px 18px;
   background: white;
 }
 header {
-  width: 600px;
+  width: 800px;
   margin: 0 auto;
   padding: 18px;
   background-color: darken($html-background-color, 32%);
