--- a/app/views/fortunes/index.html.erb
+++ b/app/views/fortunes/index.html.erb
@@ -13,4 +13,4 @@
 <%= paginate @fortunes %>
 
 
-<p><%= link_to "New Fortune", new_fortune_path %></p>
+<p> <div id="links"><%= link_to "New Fortune", new_fortune_path %></div></p>
