--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,10 +1,19 @@
-<p><i>Autor:</i> <%= comment.author %></p>
-<div class="comment"><i>Body:</i>
-  <%= comment.body %>
+
+<div id="commentBox">
+  <%= comment.body %>   <br/>
+  <p class="author">Autor: <%= comment.author %></p>
+  <p class="date">Added: <%= comment.created_at %></p>
+  <p class="l links">
+     <%= link_to "Delete", [@fortune, comment], :confirm => t('helpers.data.sure'), :method => :delete %>
+     <%= link_to 'Edit', edit_fortune_comment_path(@fortune, comment) %>
+  </p>
 </div>
 <p>
-  <%= link_to "Delete", [@fortune, comment], :confirm => t('helpers.data.sure'), :method => :delete %>
+
+
+
 </p>
- <p>
-<%= link_to 'Edit', edit_fortune_comment_path(@fortune, comment) %>
-</p>
+
+
+
+
