--- a/app/views/fortunes/new.html.erb
+++ b/app/views/fortunes/new.html.erb
@@ -1,10 +1,7 @@
 <h1>New fortune</h1>
 
-<%= simple_form_for @fortune do |f| %>
-  <%= f.input :body, :input_html => {:rows => 4, :cols => 40} %>
-  <%= f.input :author, :input_html => {:size => 41}, :required => false %>
-  <%= f.button :submit %>
-<% end %>
+<%= render 'form' %>
+
 <br/>
 <br/>
 <%= link_to 'Back', fortunes_path %>
