--- a/app/views/fortunes/_fortune.html.erb
+++ b/app/views/fortunes/_fortune.html.erb
@@ -1,5 +1,5 @@
 <div class="fortune">
-  <%= ratings_for fortune, :static %>
+  <%= ratings_for fortune %>
 
  <p class="body"><b><%= fortune.body %></b><p>
   <div class="links">
@@ -7,6 +7,7 @@
      <%= link_to "Edit", edit_fortune_path(fortune) %> |
      <%= link_to 'Destroy', fortune, :confirm => t('helpers.data.sure'), :method => :delete %>
 </div>
+  <p class="comments"> Comments <%= fortune.comments.count %> <%= link_to "Show", fortune_path(fortune) %> </p>
  <p class="author"><%= fortune.author %></p>
 </div>
 
