--- a/app/views/fortunes/index.html.erb
+++ b/app/views/fortunes/index.html.erb
@@ -13,4 +13,4 @@
 <%= paginate @fortunes %>
 
 
-<p> <div id="links"><%= link_to "New Fortune", new_fortune_path %></div></p>
+<p> <div class="links"><%= link_to "New Fortune", new_fortune_path %></div></p>
