--- a/app/views/fortunes/new.html.erb
+++ b/app/views/fortunes/new.html.erb
@@ -2,6 +2,4 @@
 
 <%= render 'form' %>
 
-<br/>
-<br/>
-<%= link_to 'Back', fortunes_path %>
+<div class="links"><%= link_to 'Back', fortunes_path %> </div>
